EN Translation correction for stealing an item of a dead citizen house chatlog

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -10421,7 +10421,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>%actor% hat bei der Plünderung von † %victim% Haus diesen Gegenstand gestohlen: %item%</source>
-        <target>%actor% aquired the %item% during the pillaging of † %victim%'s house!</target>
+        <target>%actor% acquired the %item% during the pillaging of † %victim%'s house!</target>
       </segment>
     </unit>
     <unit id="n19gYuh" name="Das folgende Bauprojekt wurde empfohlen:">
