--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -7730,7 +7730,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Du versucht nochmal alle deine Kräfte für heute Abend zu mobilisieren. Die Anspannung steht dir ins Gesicht geschrieben. Du schwitzt und deine Hände zittern.{hr}Beim heutigen Angriff wirst du weder weder Durst, noch Krankheitssymptome (Infektion), noch Entzugserscheinungen verspüren.</source>
-        <target>Du versucht nochmal alle deine Kräfte für heute Abend zu mobilisieren. Die Anspannung steht dir ins Gesicht geschrieben. Du schwitzt und deine Hände zittern.{hr}Beim heutigen Angriff wirst du weder weder Durst, noch Krankheitssymptome (Infektion), noch Entzugserscheinungen verspüren.</target>
+        <target>You try to pull yourself together for the evening ahead. The tension is written across your face, you are sweating, shaking...<hr />You will not give in to the effects of thirst, infection, or addiction during tonight's attack.</target>
       </segment>
     </unit>
     <unit id="ClZU0Ua" name="a655585">
