--- a/translations/buildings.es.xlf
+++ b/translations/buildings.es.xlf
@@ -3292,7 +3292,16 @@
       </notes>
       <segment>
         <source>Schokoladenkreuz</source>
-        <target>Schokoladenkreuz</target>
+        <target>Cruz de chocolate</target>
+      </segment>
+    </unit>
+    <unit id="fDHJWJh" name="79667b6">
+      <notes>
+        <note category="german">Ein wunderschönes Kreuz aus Schokolade, an dem unliebsame (oder lästige) Mitbürger platziert werden können. Ist mal was "anderes" als die klassische Verbannung...</note>
+      </notes>
+      <segment>
+        <source>Ein wunderschönes Kreuz aus Schokolade, an dem unliebsame (oder lästige) Mitbürger platziert werden können. Ist mal was "anderes" als die klassische Verbannung...</source>
+        <target>Una hermosa cruz hecha de chocolate para colocar a los habitantes no deseados allí en lugar de simplemente desterrarlos de la comunidad...</target>
       </segment>
     </unit>
   </file>
