Fixing FR translation mistake on the Chocolate cross description

--- a/translations/buildings.fr.xlf
+++ b/translations/buildings.fr.xlf
@@ -3283,7 +3283,7 @@
       </notes>
       <segment>
         <source>Ein wunderschönes Kreuz aus Schokolade, an dem unliebsame (oder lästige) Mitbürger platziert werden können. Ist mal was "anderes" als die klassische Verbannung...</source>
-        <target>Une belle croix réalisée en chocolat pour y placer les citoyens indésirables plutôt que de se contenter de les bannir de la communsuté...</target>
+        <target>Une belle croix réalisée en chocolat pour y placer les citoyens indésirables plutôt que de se contenter de les bannir de la communauté...</target>
       </segment>
     </unit>
   </file>
