EN Translation correction for spying neighboors info (continued)

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -6710,7 +6710,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Der Bürger wurde zuletzt %time% gesehen.</source>
-        <target>was last seen around %time%.</target>
+        <target>Was last seen around %time%.</target>
       </segment>
     </unit>
     <unit id="y2ljklH" name="Dieser Bürger hat %ration% Wasserration(en) aus dem Brunnen genommen.">
