--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -8039,5 +8039,14 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target>That's strange ... It seems that the drug did not have the expected effect. You tell yourself that you have an incredible chance...</target>
       </segment>
     </unit>
+    <unit id="IELZytx" name="Vielleicht solltest du das mithilfe des Wasserhahns füllen...">
+      <notes>
+        <note category="german">Vielleicht solltest du das mithilfe des Wasserhahns füllen...</note>
+      </notes>
+      <segment>
+        <source>Vielleicht solltest du das mithilfe des Wasserhahns füllen...</source>
+        <target>Vielleicht solltest du das mithilfe des Wasserhahns füllen...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
