--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -7985,5 +7985,14 @@
         <target>Tiens, c'est étrange... On dirait que la drogue n'a pas eu l'effet escompté. Vous vous dites que vous avez une chance incroyable...</target>
       </segment>
     </unit>
+    <unit id="IELZytx" name="Vielleicht solltest du das mithilfe des Wasserhahns füllen...">
+      <notes>
+        <note category="german">Vielleicht solltest du das mithilfe des Wasserhahns füllen...</note>
+      </notes>
+      <segment>
+        <source>Vielleicht solltest du das mithilfe des Wasserhahns füllen...</source>
+        <target>Vielleicht solltest du das mithilfe des Wasserhahns füllen...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
